crates/ruff_python_formatter/tests/snapshots/black_compatibility@torture.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/torture.py
---
## Input

```py
importA;() << 0 ** 101234234242352525425252352352525234890264906820496920680926538059059209922523523525 #

assert sort_by_dependency(
    {
        "1": {"2", "3"}, "2": {"2a", "2b"}, "3": {"3a", "3b"},
        "2a": set(), "2b": set(), "3a": set(), "3b": set()
    }
) == ["2a", "2b", "2", "3a", "3b", "3", "1"]

importA
0;0^0#

class A:
    def foo(self):
        for _ in range(10):
            aaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbb.cccccccccc(  # pylint: disable=no-member
                xxxxxxxxxxxx
            )

def test(self, othr):
    return (1 == 2 and
            (name, description, self.default, self.selected, self.auto_generated, self.parameters, self.meta_data, self.schedule) ==
            (name, description, othr.default, othr.selected, othr.auto_generated, othr.parameters, othr.meta_data, othr.schedule))


assert (
    a_function(very_long_arguments_that_surpass_the_limit, which_is_eighty_eight_in_this_case_plus_a_bit_more)
    == {"x": "this need to pass the line limit as well", "b": "but only by a little bit"}
)
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -2,20 +2,10 @@
 (
     ()
     << 0
-    ** 101234234242352525425252352352525234890264906820496920680926538059059209922523523525
+    **101234234242352525425252352352525234890264906820496920680926538059059209922523523525
 )  #
 
-assert sort_by_dependency(
-    {
-        "1": {"2", "3"},
-        "2": {"2a", "2b"},
-        "3": {"3a", "3b"},
-        "2a": set(),
-        "2b": set(),
-        "3a": set(),
-        "3b": set(),
-    }
-) == ["2a", "2b", "2", "3a", "3b", "3", "1"]
+NOT_YET_IMPLEMENTED_StmtAssert
 
 importA
 0
@@ -24,35 +14,34 @@
 
 class A:
     def foo(self):
-        for _ in range(10):
-            aaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbb.cccccccccc(
-                xxxxxxxxxxxx
-            )  # pylint: disable=no-member
+        for _ in NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg):
+            aaaaaaaaaaaaaaaaaaa = NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
 
 
 def test(self, othr):
-    return 1 == 2 and (
-        name,
-        description,
-        self.default,
-        self.selected,
-        self.auto_generated,
-        self.parameters,
-        self.meta_data,
-        self.schedule,
-    ) == (
-        name,
-        description,
-        othr.default,
-        othr.selected,
-        othr.auto_generated,
-        othr.parameters,
-        othr.meta_data,
-        othr.schedule,
+    return (
+        1 == 2
+        and (
+            name,
+            description,
+            self.default,
+            self.selected,
+            self.auto_generated,
+            self.parameters,
+            self.meta_data,
+            self.schedule,
+        )
+        == (
+            name,
+            description,
+            othr.default,
+            othr.selected,
+            othr.auto_generated,
+            othr.parameters,
+            othr.meta_data,
+            othr.schedule,
+        )
     )
 
 
-assert a_function(
-    very_long_arguments_that_surpass_the_limit,
-    which_is_eighty_eight_in_this_case_plus_a_bit_more,
-) == {"x": "this need to pass the line limit as well", "b": "but only by a little bit"}
+NOT_YET_IMPLEMENTED_StmtAssert
```

## Ruff Output

```py
importA
(
    ()
    << 0
    **101234234242352525425252352352525234890264906820496920680926538059059209922523523525
)  #

NOT_YET_IMPLEMENTED_StmtAssert

importA
0
0 ^ 0  #


class A:
    def foo(self):
        for _ in NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg):
            aaaaaaaaaaaaaaaaaaa = NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)


def test(self, othr):
    return (
        1 == 2
        and (
            name,
            description,
            self.default,
            self.selected,
            self.auto_generated,
            self.parameters,
            self.meta_data,
            self.schedule,
        )
        == (
            name,
            description,
            othr.default,
            othr.selected,
            othr.auto_generated,
            othr.parameters,
            othr.meta_data,
            othr.schedule,
        )
    )


NOT_YET_IMPLEMENTED_StmtAssert
```

## Black Output

```py
importA
(
    ()
    << 0
    ** 101234234242352525425252352352525234890264906820496920680926538059059209922523523525
)  #

assert sort_by_dependency(
    {
        "1": {"2", "3"},
        "2": {"2a", "2b"},
        "3": {"3a", "3b"},
        "2a": set(),
        "2b": set(),
        "3a": set(),
        "3b": set(),
    }
) == ["2a", "2b", "2", "3a", "3b", "3", "1"]

importA
0
0 ^ 0  #


class A:
    def foo(self):
        for _ in range(10):
            aaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbb.cccccccccc(
                xxxxxxxxxxxx
            )  # pylint: disable=no-member


def test(self, othr):
    return 1 == 2 and (
        name,
        description,
        self.default,
        self.selected,
        self.auto_generated,
        self.parameters,
        self.meta_data,
        self.schedule,
    ) == (
        name,
        description,
        othr.default,
        othr.selected,
        othr.auto_generated,
        othr.parameters,
        othr.meta_data,
        othr.schedule,
    )


assert a_function(
    very_long_arguments_that_surpass_the_limit,
    which_is_eighty_eight_in_this_case_plus_a_bit_more,
) == {"x": "this need to pass the line limit as well", "b": "but only by a little bit"}
```


